--- a/SQLLoadIntelliSense.csproj
+++ b/SQLLoadIntelliSense.csproj
@@ -56,6 +56,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
