--- a/SqlLoaderHelper.csproj
+++ b/SqlLoaderHelper.csproj
@@ -49,11 +49,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DebugLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SQLFileWatcher.cs" />
+    <Compile Include="SlnConfig.cs" />
+    <Compile Include="SQLFileCache.cs" />
     <Compile Include="SQLGoToDefinitionTextViewCreationListener.cs" />
     <Compile Include="SQLLoadCompletionProvider.cs" />
     <Compile Include="SQLLoaderHelper.cs" />
+    <Compile Include="SqlReferenceAnalyzer.cs" />
+    <Compile Include="SqlReferenceMargin.cs" />
+    <Compile Include="SqlReferenceMarginProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
@@ -67,7 +72,22 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis">
+      <Version>4.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp">
+      <Version>4.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces">
+      <Version>4.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.EditorFeatures.Text">
+      <Version>4.14.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.Features">
+      <Version>4.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.LanguageServices">
       <Version>4.14.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.14.40265" ExcludeAssets="runtime" NoWarn="NU1604">
